route for delete user and swagger documentation
