# src/models/CollectionPoint.js
@@ -1,86 +1,86 @@
 const { DataTypes } = require('sequelize');
 const connection = require('../database/connection');
-const User = require('./User');
 
 const CollectionPoint = connection.define('collection_points', {
   name: {
     type: DataTypes.STRING(180),
-    allowNull: false
+    allowNull: false,
   },
   description: {
     type: DataTypes.STRING,
-    allowNull: true
-  },
-  recycle_types: {
-    type: DataTypes.TEXT,
-    allowNull: false
+    allowNull: true,
   },
   postalcode: {
     type: DataTypes.STRING(8),
     allowNull: false,
     validate: {
       isNumeric: true,
-      len: [8, 8]
-    }
+      len: [8, 8],
+    },
   },
   street: {
     type: DataTypes.STRING(180),
-    allowNull: false
+    allowNull: false,
   },
   neighborhood: {
     type: DataTypes.STRING(150),
-    allowNull: false
+    allowNull: false,
   },
   city: {
     type: DataTypes.STRING(100),
-    allowNull: false
+    allowNull: false,
   },
   state: {
     type: DataTypes.STRING(2),
     allowNull: false,
     validate: {
       isAlpha: true,
-      len: [2, 2]
-    }
+      len: [2, 2],
+    },
   },
   number: {
     type: DataTypes.STRING(10),
-    allowNull: false
+    allowNull: false,
   },
   complement: {
     type: DataTypes.STRING(30),
-    allowNull: true
+    allowNull: true,
   },
   latitude: {
     type: DataTypes.DOUBLE,
-    allowNull: true
+    allowNull: true,
   },
   longitude: {
     type: DataTypes.DOUBLE,
-    allowNull: true
+    allowNull: true,
   },
   map_link: {
     type: DataTypes.STRING,
-    allowNull: true
+    allowNull: true,
   },
   user_id: {
     type: DataTypes.INTEGER,
+    allowNull: false,
     references: {
-      model: User,
-      key: 'id'
+      model: 'users',
+      key: 'id',
     },
-    allowNull: false
   },
   createdAt: {
     type: DataTypes.DATE,
-    allowNull: false
+    allowNull: false,
   },
   updatedAt: {
     type: DataTypes.DATE,
-    allowNull: false
-  }
+    allowNull: false,
+  },
 });
 
-CollectionPoint.belongsTo(User, { foreignKey: 'user_id' });
+CollectionPoint.associate = (models) => {
+  CollectionPoint.belongsTo(models.User, {
+    foreignKey: 'user_id',
+    as: 'user',
+  });
+};
 
 module.exports = CollectionPoint;
