# src/routes/doc.swagger.json
@@ -34,7 +34,7 @@
         "tags": [
           "Login"
         ],
-        "description": "Endpoint para logar um usuário e criar um token para acesso",
+        "description": "Endpoint para logar um usuário e criar um token para acesso. <br><br> <b>Importante:</b> Para utilizar as rotas protegidas no Swagger, adicione <code>Bearer &lt;token&gt;</code> no campo de autorização.",
         "parameters": [
           {
             "name": "loginUsuario",
@@ -61,11 +61,37 @@
           }
         ],
         "responses": {
+          "200": {
+            "description": "Login bem-sucedido, token gerado com sucesso.",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "token": {
+                  "type": "string",
+                  "example": "string"
+                },
+                "id": {
+                  "type": "string",
+                  "example": "integer"
+                },
+                "name": {
+                  "type": "string",
+                  "example": "string"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
           "400": {
-            "description": "Bad Request"
+            "description": "Email e senha são obrigatórios."
           },
           "404": {
-            "description": "Not Found"
+            "description": "Usuário não encontrado ou senha incorreta."
+          },
+          "500": {
+            "description": "Erro interno do servidor."
           }
         }
       }
@@ -75,7 +101,7 @@
         "tags": [
           "Usuários"
         ],
-        "description": "Endpoint para criar um usuário. Senha deve conter no minimo 8 caracteres, maiuscula, minuscula e caractere especial. O cpf deve ser válido",
+        "description": "Endpoint para criar um usuário. Senha deve conter no mínimo 8 caracteres, incluindo maiúscula, minúscula e caractere especial. O CPF deve ser válido.",
         "parameters": [
           {
             "name": "criarUsuario",
@@ -91,7 +117,7 @@
                 },
                 "cpf": {
                   "type": "string",
-                  "example": "862.885.759-17"
+                  "example": "86288575917"
                 },
                 "gender": {
                   "type": "string",
@@ -111,7 +137,7 @@
                 },
                 "postalcode": {
                   "type": "string",
-                  "example": "88067-108"
+                  "example": "88067108"
                 },
                 "street": {
                   "type": "string",
@@ -152,8 +178,59 @@
           }
         ],
         "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "201": {
+            "description": "Usuário criado com sucesso."
+          },
+          "400": {
+            "description": "Dados inválidos fornecidos."
+          },
+          "404": {
+            "description": "Not Found"
+          },
           "409": {
-            "description": "Conflict"
+            "description": "CPF ou email já existem."
+          },
+          "500": {
+            "description": "Erro interno do servidor."
+          }
+        }
+      }
+    },
+    "/usuarios/{id}": {
+      "delete": {
+        "tags": [
+          "Usuários"
+        ],
+        "description": "Endpoint para excluir um usuário pelo ID. A exclusão só será permitida se não houver pontos de coleta relacionados ao usuário.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "description": "ID do usuário"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Usuário excluído com sucesso."
+          },
+          "400": {
+            "description": "Usuário possui pontos de coleta relacionados e não pode ser excluído."
+          },
+          "404": {
+            "description": "Usuário não encontrado."
+          },
+          "500": {
+            "description": "Erro interno do servidor."
           }
         }
       }
@@ -163,20 +240,81 @@
         "tags": [
           "Pontos de Coleta"
         ],
-        "description": "description: 'Endpoint para criar um ponto de coleta.<br><ul><li>Somente usuários autenticados podem criar um ponto de coleta e o ponto de coleta será veiculado ao usuário autenticado <small>Roteiro da aplicação 7.b</small></li><li>Todos os campos são obrigatórios logo se o usuário não preencher os campos, o endpoint irá retornar status 400 com a mensagem sobre o campo que não foi preenchido <small>Roteiro da aplicação 7.c</small></li><li>Caso o cep não for encontrado no <b>nominatim.openstreetmap</b> as colunas latitude, longitude e map_link serão preenchidas com null.</li><li>Se tudo der certo o sistema ira devolver o status 201 com as informações do novo ponto de coleta.</li><li>Se houver erro o sistema ira devolver o status 500 com a mensagem: <b>Erro interno do servidor",
+        "description": "Endpoint para criar um ponto de coleta. Somente usuários autenticados podem criar um ponto de coleta e o ponto de coleta será veiculado ao usuário autenticado. Todos os campos são obrigatórios. Caso o CEP não seja encontrado na nominatim.openstreetmap, as colunas latitude, longitude e map_link serão preenchidas com null. Se tudo der certo, o sistema retornará status 201 com as informações do novo ponto de coleta. Se houver erro, o sistema retornará status 500 com a mensagem: Erro interno do servidor // Internal Server Error e o erro será exibido no console.",
         "parameters": [
           {
             "name": "authorization",
             "in": "header",
             "type": "string"
+          },
+          {
+            "name": "criarPontoDeColeta",
+            "in": "body",
+            "description": "Dados do ponto de coleta",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "type": "string",
+                  "example": "Ponto Dakir Polidoro"
+                },
+                "description": {
+                  "type": "string",
+                  "example": "Este é um ponto de coleta da comcap para recolhimento de vidros"
+                },
+                "recycle_types": {
+                  "type": "string",
+                  "example": "Vidro, Papel, Plástico"
+                },
+                "postalcode": {
+                  "type": "string",
+                  "example": "88063-565"
+                },
+                "street": {
+                  "type": "string",
+                  "example": "Rua Radialista Dakir Polidoro"
+                },
+                "neighborhood": {
+                  "type": "string",
+                  "example": "Campeche"
+                },
+                "city": {
+                  "type": "string",
+                  "example": "Florianópolis"
+                },
+                "state": {
+                  "type": "string",
+                  "example": "SC"
+                },
+                "number": {
+                  "type": "string",
+                  "example": "123"
+                }
+              },
+              "required": [
+                "name",
+                "description",
+                "recycle_types",
+                "postalcode",
+                "street",
+                "neighborhood",
+                "city",
+                "state",
+                "number"
+              ]
+            }
           }
         ],
         "responses": {
+          "201": {
+            "description": "Ponto de coleta criado com sucesso."
+          },
           "400": {
-            "description": "Bad Request"
+            "description": "Dados inválidos fornecidos."
           },
           "500": {
-            "description": "Internal Server Error"
+            "description": "Erro interno do servidor."
           }
         }
       },
@@ -184,7 +322,7 @@
         "tags": [
           "Pontos de Coleta"
         ],
-        "description": "Endpoint para listar todos os pontos de coleta cadastrados pelo usuário autenticado <small>Roteiro da aplicação 8.a</small><br>No momento do login, o id do usuário é armazenado no token, logo o endpoint ira usar esse id para garantir que<br>apenas o usuário veja apenas os pontos de coleta que ele criou. <small>Roteiro da aplicação 8.b</small>",
+        "description": "Endpoint para listar todos os pontos de coleta cadastrados pelo usuário autenticado. No momento do login, o id do usuário é armazenado no token. O endpoint usará esse id para garantir que apenas o usuário veja os pontos de coleta que ele criou.",
         "parameters": [
           {
             "name": "authorization",
@@ -194,7 +332,7 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Lista de pontos de coleta retornada com sucesso."
           },
           "400": {
             "description": "Bad Request"
@@ -203,7 +341,7 @@
             "description": "Not Found"
           },
           "500": {
-            "description": "Internal Server Error"
+            "description": "Erro interno do servidor."
           }
         }
       }
@@ -213,7 +351,7 @@
         "tags": [
           "Pontos de Coleta"
         ],
-        "description": "Endpoint para obter detalhes de um ponto de coleta específico cadastrado pelo usuário autenticado <small>Roteiro da aplicação 9.a</small><br>No momento do login, o id do usuário é armazenado no token, logo o endpoint ira usar esse id para garantir que<br>apenas o usuário autenticado tenha acesso a essas informações. <small>Roteiro da aplicação 9.b</small>",
+        "description": "Endpoint para obter detalhes de um ponto de coleta específico cadastrado pelo usuário autenticado. No momento do login, o id do usuário é armazenado no token. O endpoint usará esse id para garantir que apenas o usuário autenticado tenha acesso a essas informações.",
         "parameters": [
           {
             "name": "local_id",
@@ -230,16 +368,16 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Detalhes do ponto de coleta retornados com sucesso."
           },
           "400": {
             "description": "Bad Request"
           },
           "404": {
-            "description": "Not Found"
+            "description": "Ponto de coleta não encontrado."
           },
           "500": {
-            "description": "Internal Server Error"
+            "description": "Erro interno do servidor."
           }
         }
       },
@@ -247,7 +385,7 @@
         "tags": [
           "Pontos de Coleta"
         ],
-        "description": "Endpoint para excluir um ponto de coleta específico cadastrado pelo usuário autenticado <small>Roteiro da aplicação 10.a</small><br>No momento do login, o id do usuário é armazenado no token, logo o endpoint ira usar esse id para garantir que<br>apenas o usuário autenticado e que criou o ponto de coleta tenha acesso a essas informações. <small>Roteiro da aplicação 10.b</small><ul><li>status 201 - Ponto de coleta excluído com sucesso</li><li>status 404 - Ponto de coleta não encontrado</li><li>status 500 - Erro interno</li></ul>",
+        "description": "Endpoint para excluir um ponto de coleta específico cadastrado pelo usuário autenticado. No momento do login, o id do usuário é armazenado no token. O endpoint usará esse id para garantir que apenas o usuário autenticado que criou o ponto de coleta tenha acesso a essas informações.",
         "parameters": [
           {
             "name": "local_id",
@@ -264,16 +402,16 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Ponto de coleta excluído com sucesso."
           },
           "400": {
             "description": "Bad Request"
           },
           "404": {
-            "description": "Not Found"
+            "description": "Ponto de coleta não encontrado."
           },
           "500": {
-            "description": "Internal Server Error"
+            "description": "Erro interno do servidor."
           }
         }
       },
@@ -281,7 +419,7 @@
         "tags": [
           "Pontos de Coleta"
         ],
-        "description": "Endpoint para atualizar informações de um ponto de coleta específico cadastrado pelo usuário autenticado <small>Roteiro da aplicação 10.a</small><br>No momento do login, o id do usuário é armazenado no token, logo o endpoint ira usar esse id para garantir que<br>apenas o usuário autenticado e que criou o ponto de coleta possa alterar ele <small>Roteiro da aplicação 10.b</small>.<ul><li>Somente o usuário que criou o ponto de coleta pode atualizar</li><li>Todos os campos são obrigatórios, logo se o usuário que criou o ponto de coleta não preencher os campos, o endpoint irá retornar status 400 com a mensagem sobre o campo que não foi preenchido</li><li>Caso o cep não for encontrado no <b>nominatim.openstreetmap</b> as colunas latitude, longitude e map_link serão preenchidas com null.</li><li>Se tudo der certo o sistema ira devolver o status 201 com as informações do ponto de coleta atualizado.</li><li>Se houver erro o sistema ira devolver o status 500 com a mensagem: <b>Erro interno do servidor // Internal Server Error</b> e no console log irá exibir o erro capturado no catch</li><li>status 404 - Ponto de coleta não encontrado</li></ul>",
+        "description": "Endpoint para atualizar informações de um ponto de coleta específico cadastrado pelo usuário autenticado. No momento do login, o id do usuário é armazenado no token. O endpoint usará esse id para garantir que apenas o usuário autenticado que criou o ponto de coleta possa alterá-lo. Todos os campos são obrigatórios. Caso o CEP não seja encontrado na nominatim.openstreetmap, as colunas latitude, longitude e map_link serão preenchidas com null. Se tudo der certo, o sistema retornará status 200 com as informações do ponto de coleta atualizado. Se houver erro, o sistema retornará status 500 com a mensagem: Erro interno do servidor // Internal Server Error e o erro será exibido no console.",
         "parameters": [
           {
             "name": "local_id",
@@ -356,16 +494,16 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Ponto de coleta atualizado com sucesso."
           },
           "400": {
-            "description": "Bad Request"
+            "description": "Dados inválidos fornecidos."
           },
           "404": {
-            "description": "Not Found"
+            "description": "Ponto de coleta não encontrado."
           },
           "500": {
-            "description": "Internal Server Error"
+            "description": "Erro interno do servidor."
           }
         }
       }
@@ -375,7 +513,7 @@
         "tags": [
           "Pontos de Coleta"
         ],
-        "description": "Endpoint para obter o link do Google Maps de um ponto de coleta específico cadastrado pelo usuário autenticado. <small>Roteiro da aplicação 11.a</small><br><ul><li>Caso não encontre o ponto de coleta, o sistema tentará novamente gerar o link pelo cep</li><li>Caso não encontre o cep, irá devolver o status 404 com a mensagem que o CEP não foi encontrado, então o link para o Google Maps é nulo // The postal code was not found, so the Google Maps link is null <small>Roteiro da aplicação 11.b</small></li><li>Somente o usuário que criou o ponto de coleta pode acessar o link <small>Roteiro da aplicação 11.c</small></li></ul>",
+        "description": "Endpoint para obter o link do Google Maps de um ponto de coleta específico cadastrado pelo usuário autenticado. Se o ponto de coleta não for encontrado, o sistema tentará gerar o link pelo CEP. Se o CEP não for encontrado, o endpoint retornará status 404 com a mensagem: O CEP não foi encontrado, então o link para o Google Maps é nulo // The postal code was not found, so the Google Maps link is null. Somente o usuário que criou o ponto de coleta pode acessar o link.",
         "parameters": [
           {
             "name": "local_id",
@@ -391,14 +529,29 @@
           }
         ],
         "responses": {
+          "200": {
+            "description": "Link do Google Maps retornado com sucesso.",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "map_link": {
+                  "type": "string",
+                  "example": "https://www.google.com/maps?q=latitude,longitude"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
           "400": {
             "description": "Bad Request"
           },
           "404": {
-            "description": "Not Found"
+            "description": "Ponto de coleta ou CEP não encontrado."
           },
           "500": {
-            "description": "Internal Server Error"
+            "description": "Erro interno do servidor."
           }
         }
       }
